tests/ui/unexpected-struct-source.stderr
error: not expected here; the #[source] attribute belongs on a specific field
 --> tests/ui/unexpected-struct-source.rs:4:1
  |
3 | #[derive(Error, Debug)]
  |          ----- in this derive macro expansion
4 | #[source]
  | ^^^^^^^^^
  |
  = note: this error originates in the derive macro `Error` (in Nightly builds, run with -Z macro-backtrace for more info)
